--- a/share/man/man4/ef.4
+++ b/share/man/man4/ef.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ef.4,v 1.8 2001/06/22 12:15:44 mpech Exp $
+.\"	$OpenBSD: ef.4,v 1.9 2001/06/23 07:03:54 pjanzen Exp $
 .\"
 .\" Copyright (c) 1998 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -44,7 +44,7 @@ device driver supports the 3Com Fast EtherLink ISA family
 of Ethernet cards, and embedded controllers based on the 3Com
 .Dq corkscrew
 EtherLink chips.
-This includes the 3C515 adapter(s) with National Semiconduction
+This includes the 3C515 adapter(s) with National Semiconductor
 .Tn DP83840
 PHYs, see
 .Xr nsphy 4 .
