--- a/share/man/man4/fxp.4
+++ b/share/man/man4/fxp.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: fxp.4,v 1.17 2001/06/22 12:15:45 mpech Exp $
+.\"	$OpenBSD: fxp.4,v 1.18 2001/06/23 07:03:55 pjanzen Exp $
 .\"
 .\" Copyright (c) 1997 David E. O'Brien
 .\"
@@ -99,7 +99,7 @@ A fatal initialization error has occurred.
 .It "fxp%d: couldn't map interrupt"
 A fatal initialization error has occurred.
 .It "fxp%d: Failed to malloc memory"
-There are not enough mbuf's available for allocation.
+There are not enough mbufs available for allocation.
 .It "fxp%d: device timeout"
 The device has stopped responding to the network, or there is a problem with
 the network connection (cable).
