--- a/share/man/man4/man4.atari/floppy.4
+++ b/share/man/man4/man4.atari/floppy.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: floppy.4,v 1.3 2001/01/29 02:11:10 niklas Exp $
+.\"	$OpenBSD: floppy.4,v 1.4 2001/06/23 07:04:12 pjanzen Exp $
 .\"	$NetBSD: floppy.4,v 1.2 1995/11/28 08:03:27 jtc Exp $
 .\"
 .\" Copyright (c) 1995 Leo Weppelman
@@ -43,7 +43,7 @@ floppy interface
 .Cd "fd0 at fdc0 unit 0"
 .Cd "fd1 at fdc0 unit 1"
 .Sh DESCRIPTION
-This is an interface to the buildin and external floppy drives on the Atari.
+This is an interface to the built-in and external floppy drives on the Atari.
 Currently, there is no disklabel support for the floppy drives. Instead, the
 floppy interface uses the partition number embedded in the minor device number
 to distinguish between various floppy formats.
