--- a/share/man/man4/man4.atari/ms.4
+++ b/share/man/man4/man4.atari/ms.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ms.4,v 1.5 2001/01/29 02:11:11 niklas Exp $
+.\"	$OpenBSD: ms.4,v 1.6 2001/06/23 07:04:12 pjanzen Exp $
 .\"	$NetBSD: ms.4,v 1.2 1996/04/25 06:03:47 leo Exp $
 .\"
 .\" Copyright (c) 1995 Leo Weppelman
@@ -44,7 +44,7 @@ mouse interface
 .Sh DESCRIPTION
 The Atari mouse driver supports both the original Atari mouse and the third
 party 3-button mouse that has its middle button connected to the up-switch
-of the second joystick port. To accomodate X11 users with a standard mouse,
+of the second joystick port. To accommodate X11 users with a standard mouse,
 the driver is able to emulate the middle button. See the section on ioctls
 for more info.
 .Pp
