--- a/share/man/man4/man4.hppa/asp.4
+++ b/share/man/man4/man4.hppa/asp.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: asp.4,v 1.3 1999/06/05 13:18:40 aaron Exp $
+.\"	$OpenBSD: asp.4,v 1.4 2001/06/23 07:04:13 pjanzen Exp $
 .\"
 .\"
 .\" Copyright (c) 1999 Michael Shalayeff
@@ -58,7 +58,7 @@ RAM and EEPROM controllers
 .El
 .Pp
 The irq level supplied is hardwired to the cpu pin, so changing the value
-would not produce any noticable results (except lost interrupts for the whole
+would not produce any noticeable results (except lost interrupts for the whole
 I/O subsystem).
 .Sh SEE ALSO
 .Xr gsc 4 ,
