--- a/share/man/man4/man4.i386/bios.4
+++ b/share/man/man4/man4.i386/bios.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: bios.4,v 1.1 2001/02/28 20:41:46 mickey Exp $
+.\"	$OpenBSD: bios.4,v 1.2 2001/06/23 07:04:13 pjanzen Exp $
 .\"
 .\" Copyright (c) 2001 Michael Shalayeff
 .\" All rights reserved.
@@ -53,7 +53,7 @@ and could be used as a crude BIOS version identification.
 The
 .Nm
 driver also scans the ISA memory hole at 640K-1M for optional
-ROM images and reserves the space from being used by variuos
+ROM images and reserves the space from being used by various
 isa devices, for example
 .Xr pcic 4 .
 .Pp
