--- a/share/man/man4/man4.i386/intro.4
+++ b/share/man/man4/man4.i386/intro.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: intro.4,v 1.21 2001/03/01 20:44:49 aaron Exp $
+.\"	$OpenBSD: intro.4,v 1.22 2001/06/23 07:04:14 pjanzen Exp $
 .\"
 .\" Copyright (c) 1994 Christopher G. Demetriou
 .\" All rights reserved.
@@ -200,7 +200,7 @@ Texas Instruments ThunderLAN ethernet
 SMC 9432 10/100 Mbps Ethernet cards
 .It uha
 Ultrastor ISA and EISA SCSI adapter cards.
-Ultrastore 14f, Ultrastore 34f, and Ultrastore 24f.
+Ultrastor 14f, Ultrastor 34f, and Ultrastor 24f.
 .It vr
 VIA Rhine Ethernet.
 .It wb
