--- a/share/man/man4/man4.i386/mtrr.4
+++ b/share/man/man4/man4.i386/mtrr.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mtrr.4,v 1.7 2001/06/11 01:28:07 millert Exp $
+.\"	$OpenBSD: mtrr.4,v 1.8 2001/06/23 07:04:15 pjanzen Exp $
 .\"
 .\" Pentium MTRR  driver for OpenBSD.
 .\" Copyright 1999 Matthieu Herrb <matthieu@openbsd.org>
@@ -132,7 +132,7 @@ An attempt to create a new range failed due to a shortage of hardware
 resources (e.g., descriptor slots).
 .It Bq Er ENOENT
 An attempt to remove a range failed because no range matches the descriptor
-base/length supplued.
+base/length supplied.
 .It Bq Er EPERM
 An attempt to remove a range failed because the range is permanently
 enabled.
