--- a/share/man/man4/man4.i386/pctr.4
+++ b/share/man/man4/man4.i386/pctr.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pctr.4,v 1.13 2001/06/05 05:05:39 pvalchev Exp $
+.\"	$OpenBSD: pctr.4,v 1.14 2001/06/23 07:04:15 pjanzen Exp $
 .\"
 .\" Pentium performance counter driver for OpenBSD.
 .\" Copyright 1996 David Mazieres <dm@lcs.mit.edu>.
@@ -324,7 +324,7 @@ Number of cycles during which the divider is busy.
 .It 0x21 L2_ADS
 Number of L2 address strobes.
 .It 0x22 L2_DBUS_BUSY
-Number of cycles durring which the data bus was busy.
+Number of cycles during which the data bus was busy.
 .It 0x23 L2_DBUS_BUSY_RD
 Number of cycles during which the data bus was busy transferring data
 from L2 to the processor.
@@ -435,7 +435,7 @@ Number of hardware interrupts received.
 .It 0xc9 BR_TAKEN_RETIRED
 Number of taken branches retired.
 .It 0xca BR_MISS_PRED_TAKEN_RET
-Number of taken mispredictioned branches retired.
+Number of taken mispredicted branches retired.
 .It 0xd0 INST_DECODER
 Number of instructions decoded.
 .It 0xd2 PARTIAL_RAT_STALLS
