--- a/share/man/man4/man4.pmax/ioasic.4
+++ b/share/man/man4/man4.pmax/ioasic.4
@@ -28,7 +28,7 @@
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
 .\"	$NetBSD: ioasic.4,v 1.4 1997/10/31 02:26:09 jonathan Exp $
-.\"	$OpenBSD: ioasic.4,v 1.6 1999/07/09 13:35:40 aaron Exp $
+.\"	$OpenBSD: ioasic.4,v 1.7 2001/06/23 07:04:16 pjanzen Exp $
 .\"
 .Dd August 6, 1996
 .Dt IOASIC 4 pmax
@@ -65,7 +65,7 @@ The
 .Nm
 is also used for those
 floppy-disc drive and audio/ISDN hardware
-on the Personal DECstation and audio-equipted TC Alphas, where the
+on the Personal DECstation and audio-equipped TC Alphas, where the
 .Nm
 hardware provides a
 scatter-gather DMA channel between he 16-bit device and the 32-bit
