--- a/share/man/man4/man4.sparc/cgeight.4
+++ b/share/man/man4/man4.sparc/cgeight.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cgeight.4,v 1.7 1999/09/09 02:40:21 jason Exp $
+.\"	$OpenBSD: cgeight.4,v 1.8 2001/06/23 07:04:17 pjanzen Exp $
 .\"	$NetBSD: cgeight.4,v 1.2 1997/10/08 22:00:03 jtc Exp $
 .\"
 .\" Copyright (c) 1996 The NetBSD Foundation, Inc.
@@ -54,7 +54,9 @@ by using the
 system call.
 The
 .Nm
-driver supports the minimal ioctl's needed to run
+driver supports the minimal
+.Xr ioctl 2 Ns s
+needed to run
 .Xr X 1 .
 .Sh SEE ALSO
 .Xr bwtwo 4 ,
