--- a/share/man/man4/man4.sparc/intro.4
+++ b/share/man/man4/man4.sparc/intro.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: intro.4,v 1.15 2001/02/01 03:33:27 jason Exp $
+.\"     $OpenBSD: intro.4,v 1.16 2001/06/23 07:04:19 pjanzen Exp $
 .\"	$NetBSD: intro.4,v 1.5 1998/02/06 06:07:00 perry Exp $
 .\"
 .\" Copyright (c) 1996 Jonathan Stone.
@@ -254,7 +254,7 @@ SBus QuadFastEthernet controllers
 .It si
 NCR5380 "SCSI-2" VMEbus (Sun 4/200, Sun 4/400) SCSI controller
 .It sw
-NCR5380 obio (Sun 4/100) "SCSI Wierd" SCSI controller
+NCR5380 obio (Sun 4/100) "SCSI Weird" SCSI controller
 .It tctrl
 Tadpole microcontroller interface
 .It tcx
