--- a/share/man/man4/man4.sparc/zs.4
+++ b/share/man/man4/man4.sparc/zs.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: zs.4,v 1.6 1999/07/09 13:35:42 aaron Exp $
+.\"	$OpenBSD: zs.4,v 1.7 2001/06/23 07:04:21 pjanzen Exp $
 .\"
 .\" Copyright (c) 1998 The OpenBSD Project
 .\" All rights reserved.
@@ -62,5 +62,7 @@ The
 .Nm
 driver first appeared in
 .Bx 4.4 .
-Support for the TIOCM* ioctl's appeared in
+Support for the TIOCM*
+.Xr ioctl 2 Ns s
+appeared in
 .Ox 2.3 .
