--- a/share/man/man4/man4.vax/dmz.4
+++ b/share/man/man4/man4.vax/dmz.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dmz.4,v 1.3 1999/06/05 13:18:37 aaron Exp $
+.\"	$OpenBSD: dmz.4,v 1.4 2001/06/23 07:04:23 pjanzen Exp $
 .\"	$NetBSD: dmz.4,v 1.3 1996/03/03 17:13:26 thorpej Exp $
 .\"
 .\" Copyright (c) 1983, 1991 Regents of the University of California.
@@ -82,9 +82,9 @@ and
 .Xr stty 1
 or may be communicated by other programs which
 utilize
-.Xr ioctl
+.Xr ioctl 2
 such as
-.Xr ifcongif 8 ,
+.Xr ifconfig 8 ,
 see
 .Xr tty 4  .
 .Pp
