--- a/share/man/man4/pci.4
+++ b/share/man/man4/pci.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pci.4,v 1.36 2001/05/14 14:40:49 jason Exp $
+.\"	$OpenBSD: pci.4,v 1.37 2001/06/23 07:03:57 pjanzen Exp $
 .\"	$NetBSD: pci.4,v 1.29 2000/04/01 00:32:23 tsarna Exp $
 .\"
 .\" Copyright (c) 2000 Theo de Raadt.  All rights reserved.
@@ -132,7 +132,7 @@ controllers.
 .It Xr gdt 4
 ICP-Vortex GDT
 .Tn RAID
-conttrollers.
+controllers.
 .It Xr twe 4
 3ware Escalade
 .Tn RAID
