--- a/share/man/man4/ste.4
+++ b/share/man/man4/ste.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ste.4,v 1.7 2001/03/08 06:18:34 aaron Exp $
+.\"	$OpenBSD: ste.4,v 1.8 2001/06/23 07:03:59 pjanzen Exp $
 .\"
 .\" Copyright (c) 1997, 1998, 1999
 .\"	Bill Paul <wpaul@ctr.columbia.edu>. All rights reserved.
@@ -48,7 +48,7 @@ controllers based on the Sundance Technologies ST201 PCI fast
 Ethernet controller chip. This includes the D-Link DFE-550TX.
 .Pp
 The Sundance ST201 uses bus master DMA and is designed to be a
-3Com Etherlink XL workalike. It uses the same DMA descriptor
+3Com Etherlink XL work-alike. It uses the same DMA descriptor
 structure and is very similar in operation, however its register
 layout is different. The ST201 has a 64-bit multicast hash filter
 and a single perfect filter entry for the station address. IT
