--- a/share/man/man4/uk.4
+++ b/share/man/man4/uk.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: uk.4,v 1.7 2001/06/22 12:15:47 mpech Exp $
+.\"	$OpenBSD: uk.4,v 1.8 2001/06/23 07:04:00 pjanzen Exp $
 .\"	$NetBSD: uk.4,v 1.3 1996/10/20 23:15:26 explorer Exp $
 .\"
 .\" Copyright (c) 1996
@@ -58,7 +58,7 @@ ioctls. These are described in
 .Sh FILES
 .Bl -tag -width /dev/uk[0-255] -compact
 .It Pa /dev/uk[0-255]
-uk{x} is the  'xth'unknown device found.
+uk{x} is the 'xth' unknown device found.
 .El
 .Sh DIAGNOSTICS
 All
