--- a/share/man/man4/vr.4
+++ b/share/man/man4/vr.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: vr.4,v 1.7 2001/03/08 06:18:35 aaron Exp $
+.\"	$OpenBSD: vr.4,v 1.8 2001/06/23 07:04:00 pjanzen Exp $
 .\"
 .\" Copyright (c) 1997, 1998
 .\"	Bill Paul <wpaul@ctr.columbia.edu>. All rights reserved.
@@ -171,4 +171,4 @@ supplied buffer address and begin DMAing from the wrong location.
 This buffer copying impairs transmit performance on slower systems but can't
 be avoided.
 On faster machines (e.g., a Pentium II), the performance
-impact is much less noticable.
+impact is much less noticeable.
