--- a/share/man/man4/wb.4
+++ b/share/man/man4/wb.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: wb.4,v 1.6 2001/03/08 06:18:35 aaron Exp $
+.\"	$OpenBSD: wb.4,v 1.7 2001/06/23 07:04:00 pjanzen Exp $
 .\"
 .\" Copyright (c) 1997, 1998
 .\"	Bill Paul <wpaul@ctr.columbia.edu>. All rights reserved.
@@ -50,7 +50,7 @@ The 840F should not be confused with the 940F, which is
 an NE2000 clone and only supports 10Mbps speeds.
 .Pp
 The Winbond controller uses bus master DMA and is designed to be
-a DEC "tulip" workalike.
+a DEC "tulip" work-alike.
 It differs from the standard DEC design
 in several ways: the control and status registers are spaced 4
 bytes apart instead of 8, and the receive filter is programmed through
