--- a/share/man/man4/wsdisplay.4
+++ b/share/man/man4/wsdisplay.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: wsdisplay.4,v 1.6 2001/05/11 23:03:04 mickey Exp $
+.\" $OpenBSD: wsdisplay.4,v 1.7 2001/06/23 07:04:01 pjanzen Exp $
 .\" $NetBSD: wsdisplay.4,v 1.5 2000/05/13 15:22:19 mycroft Exp $
 .\"
 .Dd March 20, 1999
@@ -95,14 +95,14 @@ In addition and with help from backend drivers the following features
 are also provided:
 .Bl -bullet
 .It
-Loading, deleteing and listing the loaded fonts.
+Loading, deleting and listing the loaded fonts.
 .It
 Browsing backwards in the screen output, the size of the
 buffer for saved text is defined by the particular hardware driver.
 .It
-Blanking the scrren by timing out on inactivity in the
+Blanking the screen by timing out on inactivity in the
 screen holding the input focus.
-Awakenning activities consist of:
+Awakening activities consist of:
 .Pp
 .Bl -bullet -compact
 .It
@@ -121,7 +121,7 @@ See
 for controlling variables.
 .El
 .Pp
-Consult the back-end drivers' documentaion for which features are supported
+Consult the back-end drivers' documentation for which features are supported
 for each particular hardware type.
 .Sh FILES
 .Bl -tag -width /usr/include/dev/wscons/wsconsio.h -compact
