--- a/share/man/man4/ccd.4
+++ b/share/man/man4/ccd.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ccd.4,v 1.14 2000/12/21 05:32:52 aaron Exp $
+.\"	$OpenBSD: ccd.4,v 1.15 2001/06/23 07:03:53 pjanzen Exp $
 .\"	$NetBSD: ccd.4,v 1.5 1995/10/09 06:09:09 thorpej Exp $
 .\"
 .\" Copyright (c) 1994 Jason Downs.
@@ -92,7 +92,7 @@ is interleaved correctly, a
 effect is achieved, which can increase performance.
 Finding the optimum interleave factor is a hard problem.
 Some things to think about are the number of disks in the ccd,
-the typical readahead opportunities, the filesystem blocksize, and if
+the typical read-ahead opportunities, the filesystem blocksize, and if
 it's possible to use the optimized ccd I/O protocol.
 The optimized protocol allows smaller interleave factors for a
 comparably cheap price but requires that the factor be a multiple of the
