--- a/share/man/man4/man4.alpha/lpt.4
+++ b/share/man/man4/man4.alpha/lpt.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: lpt.4,v 1.2 2000/03/02 14:46:42 todd Exp $
+.\"	$OpenBSD: lpt.4,v 1.3 2001/06/23 07:04:10 pjanzen Exp $
 .\"
 .\" Copyright (c) 1993 Christopher G. Demetriou
 .\" All rights reserved.
@@ -51,7 +51,7 @@ The next lower bit (bit 6, or add 64) indicates the driver should
 avoid initializing the printer.
 .P.
 The next lower bit (bit 5, or add 32) requests that the driver do
-automatic LF generation when printing CR's.
+automatic LF generation when printing CRs.
 .Sh FILES
 .Bl -tag -width Pa -compact
 .It Pa /dev/lpt0
