--- a/share/man/man4/man4.alpha/scc.4
+++ b/share/man/man4/man4.alpha/scc.4
@@ -27,7 +27,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\"	$OpenBSD: scc.4,v 1.1 1998/03/07 22:42:31 millert Exp $
+.\"	$OpenBSD: scc.4,v 1.2 2001/06/23 07:04:10 pjanzen Exp $
 .\"
 .Dd March 7, 1998
 .Dt SCC 4 alpha
@@ -42,7 +42,7 @@ Zilog serial communications interface
 .Sh DESCRIPTION
 The
 .Nm
-driver provies support for the Zilog 8530 Serial Communcations
+driver provides support for the Zilog 8530 Serial Communications
 Controller (SCC) via the IOCTL asic on Turbochannel-based alphas
 (the DEC 3000 series).  Each scc device has two serial
 ports.
