--- a/share/man/man4/man4.amiga/ahsc.4
+++ b/share/man/man4/man4.amiga/ahsc.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ahsc.4,v 1.6 2000/03/02 14:46:43 todd Exp $
+.\"	$OpenBSD: ahsc.4,v 1.7 2001/06/23 07:04:11 pjanzen Exp $
 .\"
 .\" Copyright (c) 1994 Christian E. Hopps
 .\" All rights reserved.
@@ -83,7 +83,7 @@ expected durring polled IO.
 The target described by
 .Sq from %d
 has taken the SCSI bus into a phase which is not
-expected durring DMA IO setup.
+expected during DMA IO setup.
 .El
 .Sh SEE ALSO
 .Xr scsibus 4
