--- a/share/man/man4/man4.amiga/gtsc.4
+++ b/share/man/man4/man4.amiga/gtsc.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: gtsc.4,v 1.6 2000/03/02 14:46:44 todd Exp $
+.\"	$OpenBSD: gtsc.4,v 1.7 2001/06/23 07:04:11 pjanzen Exp $
 .\"
 .\" Copyright (c) 1994 Christian E. Hopps
 .\" All rights reserved.
@@ -78,12 +78,12 @@ An error has occurred within the SCSI chip code.
 The target described by
 .Sq from %d
 has taken the SCSI bus into a phase which is not
-expected durring polled IO.
+expected during polled IO.
 .It gtsc%d: unexpected phase %d in icmd from %d
 The target described by
 .Sq from %d
 has taken the SCSI bus into a phase which is not
-expected durring DMA IO setup.
+expected during DMA IO setup.
 .El
 .Sh SEE ALSO
 .Xr scsibus 4
