--- a/share/man/man4/man4.i386/mem.4
+++ b/share/man/man4/man4.i386/mem.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mem.4,v 1.5 2000/11/16 14:52:07 aaron Exp $
+.\"	$OpenBSD: mem.4,v 1.6 2001/06/23 07:04:14 pjanzen Exp $
 .\"
 .\" Copyright (c) 1991 The Regents of the University of California.
 .\" All rights reserved.
@@ -66,7 +66,7 @@ The per-process data size for the current process is
 long, and ends at virtual address
 .Li 0xfe000000 .
 .Pp
-Writability of these devices is controlled by the system
+Writeability of these devices is controlled by the system
 .Xr securelevel 7 .
 .Sh FILES
 .Bl -tag -width Pa -compact
