--- a/share/man/man4/man4.sparc/cgfourteen.4
+++ b/share/man/man4/man4.sparc/cgfourteen.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cgfourteen.4,v 1.7 1999/09/09 02:40:21 jason Exp $
+.\"	$OpenBSD: cgfourteen.4,v 1.8 2001/06/23 07:04:18 pjanzen Exp $
 .\"	$NetBSD: cgfourteen.4,v 1.3 1998/06/11 08:32:20 fair Exp $
 .\"
 .\" Copyright (c) 1996 The President and Fellows of Harvard College.
@@ -60,7 +60,9 @@ the
 system call.
 The
 .Nm
-driver supports the minimal ioctl's needed to run
+driver supports the minimal
+.Xr ioctl 2 Ns s
+needed to run
 .Xr X 1 .
 .Pp
 The driver operates by default in
