--- a/share/man/man4/man4.sparc/cgsix.4
+++ b/share/man/man4/man4.sparc/cgsix.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cgsix.4,v 1.8 2000/04/21 03:26:36 pjanzen Exp $
+.\"	$OpenBSD: cgsix.4,v 1.9 2001/06/23 07:04:19 pjanzen Exp $
 .\"	$NetBSD: cgsix.4,v 1.4 1998/06/11 08:32:20 fair Exp $
 .\"
 .\" Copyright 1994
@@ -37,7 +37,7 @@
 .\" SUCH DAMAGE.
 .\"
 .\"	from: @(#)cgsix.4	8.1 (Berkeley) 2/16/94
-.\"	$Id: cgsix.4,v 1.8 2000/04/21 03:26:36 pjanzen Exp $
+.\"	$Id: cgsix.4,v 1.9 2001/06/23 07:04:19 pjanzen Exp $
 .\"
 .Dd February 16, 1994
 .Dt CGSIX 4 sparc
@@ -53,7 +53,9 @@
 The
 .Nm cgsix
 is a memory based color frame buffer.
-It supports the minimal ioctl's needed to run
+It supports the minimal
+.Xr ioctl 2 Ns s
+needed to run
 .Xr X 1 .
 .Sh SEE ALSO
 .Xr bwtwo 4 ,
