--- a/share/man/man4/man4.sparc/cgthree.4
+++ b/share/man/man4/man4.sparc/cgthree.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cgthree.4,v 1.7 1999/09/09 02:40:21 jason Exp $
+.\"	$OpenBSD: cgthree.4,v 1.8 2001/06/23 07:04:19 pjanzen Exp $
 .\"	$NetBSD: cgthree.4,v 1.4 1998/06/11 08:32:20 fair Exp $
 .\"
 .\" Copyright (c) 1992, 1993
@@ -38,7 +38,7 @@
 .\"
 .\"	from: Header: cgthree.4,v 1.3 94/02/03 20:49:52 leres Exp
 .\"     from: @(#)cgthree.4	8.2 (Berkeley) 2/16/94
-.\"	$Id: cgthree.4,v 1.7 1999/09/09 02:40:21 jason Exp $
+.\"	$Id: cgthree.4,v 1.8 2001/06/23 07:04:19 pjanzen Exp $
 .\"
 .Dd February 16, 1994
 .Dt CGTHREE 4 sparc
@@ -53,7 +53,9 @@
 The
 .Nm
 is a memory based color frame buffer.
-It supports the minimal ioctl's needed to run
+It supports the minimal
+.Xr ioctl 2 Ns s
+needed to run
 .Xr X 1 .
 .Sh SEE ALSO
 .Xr bwtwo 4 ,
