--- a/share/man/man4/man4.sparc/fd.4
+++ b/share/man/man4/man4.sparc/fd.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: fd.4,v 1.3 1999/07/09 13:35:42 aaron Exp $
+.\"	$OpenBSD: fd.4,v 1.4 2001/06/23 07:04:19 pjanzen Exp $
 .\"	$NetBSD: fd.4,v 1.4 1997/11/12 00:49:42 mrg Exp $
 .\"
 .\" Copyright (c) 1996 The NetBSD Foundation, Inc.
@@ -47,7 +47,7 @@
 .Cd "fdc0 at obio0" Pq sun4m
 .Cd "fd* at fdc0"
 .Sh DESCRIPTION
-This is the driver for the built-in disquette station found on the
+This is the driver for the built-in diskette drive found on the
 Sparcstation 1, and (optionally) other desktop Sparc systems.
 .Sh SEE ALSO
 .Xr eject 1 ,
