--- a/share/man/man4/man4.sparc/pnozz.4
+++ b/share/man/man4/man4.sparc/pnozz.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: pnozz.4,v 1.3 2000/04/03 21:19:38 aaron Exp $
+.\"     $OpenBSD: pnozz.4,v 1.4 2001/06/23 07:04:20 pjanzen Exp $
 .\"
 .\" Copyright (c) 1999 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -54,7 +54,9 @@ The
 is configured to emulate a
 .Xr cgthree 4
 with a resolution of 800x600 with 256 colors.
-It supports the minimal ioctl's needed to run
+It supports the minimal
+.Xr ioctl 2 Ns s
+needed to run
 .Xr X 1 .
 .Pp
 If the
