--- a/share/man/man4/man4.sparc/tcx.4
+++ b/share/man/man4/man4.sparc/tcx.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: tcx.4,v 1.7 1999/09/09 02:40:21 jason Exp $
+.\"	$OpenBSD: tcx.4,v 1.8 2001/06/23 07:04:21 pjanzen Exp $
 .\"	$NetBSD: tcx.4,v 1.3 1997/10/08 22:00:14 jtc Exp $
 .\"
 .\" Copyright (c) 1996 The NetBSD Foundation, Inc.
@@ -53,7 +53,9 @@ the
 .Xr mmap 2
 system call. The
 .Nm
-driver supports the minimal ioctl's needed to run
+driver supports the minimal
+.Xr ioctl 2 Ns s
+needed to run
 .Xr X 1 ,
 and can be operated in
 .Xr cgthree 4
