--- a/share/man/man4/man4.sun3/cgtwo.4
+++ b/share/man/man4/man4.sun3/cgtwo.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cgtwo.4,v 1.4 2001/01/29 02:11:12 niklas Exp $
+.\"	$OpenBSD: cgtwo.4,v 1.5 2001/06/23 07:04:22 pjanzen Exp $
 .\" Copyright (c) 1992, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -56,7 +56,9 @@ space by using the
 system call.
 The
 .Nm
-driver supports the minimal ioctl's needed to run
+driver supports the minimal
+.Xr ioctl 2 Ns s
+needed to run
 .Xr X 1 .
 .Sh SEE ALSO
 .Xr bwtwo 4 ,
