--- a/share/man/man4/man4.vax/autoconf.4
+++ b/share/man/man4/man4.vax/autoconf.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: autoconf.4,v 1.4 2000/07/22 04:54:28 bjc Exp $
+.\"	$OpenBSD: autoconf.4,v 1.5 2001/06/23 07:04:22 pjanzen Exp $
 .\"	$NetBSD: autoconf.4,v 1.3 1996/03/03 17:13:13 thorpej Exp $
 .\"
 .\" Copyright (c) 1980, 1991 Regents of the University of California.
@@ -125,7 +125,7 @@ slot number).
 will call it
 .Ql mba%d .
 .Pp
-.It %d mba's not configured.
+.It %d mbas not configured.
 More
 .Tn MASSBUS
 adapters were found on
@@ -175,7 +175,7 @@ slot number).
 will call it
 .Ql mcr%d .
 .Pp
-.It 5 mcr's unsupported.
+.It 5 mcrs unsupported.
 .Ox
 supports only 4 memory controllers
 per
