--- a/share/man/man4/man4.vax/intro.4
+++ b/share/man/man4/man4.vax/intro.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: intro.4,v 1.5 2000/07/22 04:59:29 bjc Exp $
+.\"	$OpenBSD: intro.4,v 1.6 2001/06/23 07:04:24 pjanzen Exp $
 .\"	$NetBSD: intro.4,v 1.3 1996/03/03 17:13:44 thorpej Exp $
 .\"
 .\" Copyright (c) 1980, 1991 Regents of the University of California.
@@ -126,7 +126,7 @@ simply by creating appropriate table entries in the driver.
 .It dz
 DZ-11 terminal multiplexer.
 .It ibus
-Internal bus on MicroVAX, VAX 4000 series, and otheres
+Internal bus on MicroVAX, VAX 4000 series, and others
 .It le
 LANCE ethernet interface.
 .It mem
