--- a/share/man/man4/man4.vax/pcl.4
+++ b/share/man/man4/man4.vax/pcl.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pcl.4,v 1.5 2000/01/18 21:49:00 aaron Exp $
+.\"	$OpenBSD: pcl.4,v 1.6 2001/06/23 07:04:24 pjanzen Exp $
 .\"	$NetBSD: pcl.4,v 1.3 1996/03/03 17:13:57 thorpej Exp $
 .\"
 .\" Copyright (c) 1983, 1991 Regents of the University of California.
@@ -56,7 +56,7 @@ interface to the
 time division multiplexed network bus.
 The controller itself is not accessible to users.
 .Pp
-The hosts's address is specified with the
+The host's address is specified with the
 .Dv SIOCSIFADDR
 .Xr ioctl 2 .
 The interface will not transmit or receive any data before
