--- a/share/man/man4/opl.4
+++ b/share/man/man4/opl.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: opl.4,v 1.3 2000/12/21 21:01:17 aaron Exp $
+.\" $OpenBSD: opl.4,v 1.4 2001/06/23 07:03:57 pjanzen Exp $
 .\" $NetBSD: opl.4,v 1.3 1998/09/08 11:59:48 augustss Exp $
 .\"
 .\" Copyright (c) 1997 The NetBSD Foundation, Inc.
@@ -38,7 +38,7 @@
 .Os
 .Sh NAME
 .Nm opl
-.Nd Yamaha OPL2 and OPL3 FM syntheziser driver
+.Nd Yamaha OPL2 and OPL3 FM synthesizer driver
 .Sh SYNOPSIS
 .Cd "opl*  at ess?"
 .Cd "opl0  at isa? port 0x388"
@@ -49,7 +49,7 @@
 The
 .Nm
 driver provides support for the Yamaha OPL2 (YM3812) and OPL3
-(YMF262) chips.  The chips are FM synthezisers and are capable
+(YMF262) chips.  The chips are FM synthesizer and are capable
 of producing a wide range of (mostly awful) sounds.
 .Pp
 Access to the device is through the MIDI driver.
