--- a/share/man/man4/pcdisplay.4
+++ b/share/man/man4/pcdisplay.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: pcdisplay.4,v 1.3 2001/03/27 22:44:54 aaron Exp $
+.\" $OpenBSD: pcdisplay.4,v 1.4 2001/06/23 07:03:57 pjanzen Exp $
 .\" $NetBSD: pcdisplay.4,v 1.3 2000/05/13 15:22:17 mycroft Exp $
 .\"
 .Dd March 20, 1999
@@ -22,7 +22,7 @@ interface.
 .Pp
 The
 .Nm
-driver is indended as a minimal
+driver is intended as a minimal
 .Dq catch-all
 driver for the different kinds of MDA or CGA compatible adapters.
 It doesn't support multiple screens, nor colors or font loading.
