--- a/share/man/man4/pckbc.4
+++ b/share/man/man4/pckbc.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: pckbc.4,v 1.3 2001/03/27 22:44:54 aaron Exp $
+.\" $OpenBSD: pckbc.4,v 1.4 2001/06/23 07:03:57 pjanzen Exp $
 .\" $NetBSD: pckbc.4,v 1.2 2000/06/16 06:42:31 augustss Exp $
 .\"
 .Dd April 21, 1999
@@ -17,12 +17,12 @@
 .Sh DESCRIPTION
 The
 .Nm
-driver handles ressource allocation and device attachment for the
+driver handles resource allocation and device attachment for the
 traditional PC/AT keyboard controller.
 It provides two logical connections for child devices, the
 .Dq keyboard
 slot for a keyboard and the
-.Dq auxillary
+.Dq auxiliary
 slot for mice (the latter might be missing in older keyboard controllers).
 .Pp
 The optional
