--- a/share/man/man4/txp.4
+++ b/share/man/man4/txp.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: txp.4,v 1.6 2001/06/23 06:24:16 jason Exp $
+.\"     $OpenBSD: txp.4,v 1.7 2001/06/23 07:18:32 angelos Exp $
 .\"
 .\" Copyright (c) 2001 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -79,6 +79,10 @@ checksum offloading,
 segmentation, nor
 .Xr ipsec 4
 acceleration.
+Note that hardware checksumming is only used when the interface is not
+in
+.Xr bridge 4
+mode.
 .Pp
 Each of the host's network addresses
 is specified at boot time with an
